@@ -70,6 +70,7 @@ S3method(guide_merge,colorbar)
 S3method(guide_merge,legend)
 S3method(guide_train,colorbar)
 S3method(guide_train,legend)
+S3method(heightDetails,titleGrob)
 S3method(heightDetails,zeroGrob)
 S3method(interleave,default)
 S3method(interleave,unit)
@@ -137,6 +138,7 @@ S3method(scale_type,logical)
 S3method(scale_type,numeric)
 S3method(str,uneval)
 S3method(summary,ggplot)
+S3method(widthDetails,titleGrob)
 S3method(widthDetails,zeroGrob)
 export("%+%")
 export("%+replace%")
@@ -349,6 +351,7 @@ export(last_plot)
 export(layer)
 export(lims)
 export(map_data)
+export(margin)
 export(mean_cl_boot)
 export(mean_cl_normal)
 export(mean_sdl)
